--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%;
+	max-width: 960px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -40,7 +41,7 @@ header h3 {
 }
 header img {
 	float: left;
-	padding: 0 30px;
+	padding: 0 3.75%;
 }
 .shadow {
 	text-shadow: 2px 2px 2px #800000;
@@ -54,10 +55,10 @@ header img {
 }
 #nav_menu ul li {
 	float: left;
+	width: 20%;
 }
 #nav_menu ul li a {
     display: block;
-    width: 160px;
     text-align: center;
     padding: 1em 0;
     text-decoration: none;
@@ -69,6 +70,7 @@ header img {
 	color: yellow;
 }
 #nav_menu ul ul {
+	width: 100%;
     display: none;
     position: absolute;
     top: 100%;
@@ -87,9 +89,9 @@ header img {
 
 /* the styles for the section */
 section {
-	width: 525px;
+	width: 65.625%; 
 	float: right;
-	padding: 0 20px 20px 20px;
+	padding: 0 2.5% 20px 2.5%;
 }
 section h1 {
 	font-size: 150%;
@@ -131,15 +133,17 @@ article h3 {
 }
 article img {
 	float: right;
+	max-width: 40%;
+	min-width: 150px;
 	margin: .5em 0 1em 1em;
 	border: 1px solid black;
 }
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	width: 26.875%;
 	float: right;
-	padding: 0 0 20px 20px;
+	padding: 0 0 20px 2.5%;    
 }
 aside h2 {
 	color: #800000;
@@ -165,4 +169,50 @@ footer p {
 	text-align: center;
 	color: white;
 	padding: 1em 0;
+}
+
+#mobile_menu {
+	display: none;
+}
+
+@media only screen and (max-width: 734px) {
+	section h1 {
+		font-size: 125%
+	}
+	section h2, aside h2 {
+		font-size: 110%;
+	}
+	aside h3 a {
+		font-size: 85%;
+	}
+}
+@media only screen and (max-width: 648px) {
+	header img { float: none; }
+	header { text-align: center; }
+	section {
+		float: none;
+		width: 95%;
+	}
+	aside {
+		float: none;
+		padding-right: 2.5%;
+		width: 95%;
+	}
+	article img { max-width: 30%; }
+	#speakers {
+		column-count: 2;
+	}
+	#nav_menu {
+		display: none;
+	}
+	#mobile_menu {
+		display: block;
+	}
+	.slicknav_menu {
+		background-color: #800000 !important;
+	}
+}
+
+@media only screen and (max-width: 414px) {
+	body { font-size: 90%; }
 }
